z-index on fixed items to stop weird overlap issue with answer table icons

--- a/resources/styles/mixins.less
+++ b/resources/styles/mixins.less
@@ -12,6 +12,7 @@
   position: fixed;
   width: 100%;
   background-color: @bg-color;
+  z-index: 2;
 }
 
 .tutor-background-image(@img) { background-image:url("@{img}"); }
